--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="./Frame.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <base href="%PUBLIC_URL%/">
+        <base href="%societalplatform-muse%/">
         <meta
             name="description"
             content="Web site created using create-react-app"
